menambahkan file tugas

--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
               <img src="img/tugas1.jpg" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
+          <div class="col-lg-3 mb-2">
+            <a href="https://docs.google.com/document/d/1jJM81qTpJMJ6aJ_YSEIrt0fPlwPU_ilCuuxMLc2fHMg/edit?usp=sharing" target="_blank">
+              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+            </a>
+          </div>
         </div>
       </div>
       <div class="container text-white">
