finishing semua tugas

--- a/index.html
+++ b/index.html
@@ -126,6 +126,72 @@
                     <td>Toefl 11-13</td>
                     <td>74</td>
                   </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>Week 6</td>
+                    <td>Longman Complete Course</td>
+                    <td>70</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td>Week 7</td>
+                    <td>Longman Complete Course</td>
+                    <td>80</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td>Week 8</td>
+                    <td>Longman Complete Course</td>
+                    <td>78</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">8</th>
+                    <td>Week 9</td>
+                    <td>Longman Complete Course</td>
+                    <td>74</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">9</th>
+                    <td>Week 10</td>
+                    <td>Longman Introductory Course</td>
+                    <td>76</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">10</th>
+                    <td>Week 11</td>
+                    <td>Longman Introductory Course</td>
+                    <td>80</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">11</th>
+                    <td>Week 12</td>
+                    <td>Longman Introductory Course</td>
+                    <td>70</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">12</th>
+                    <td>Week 13</td>
+                    <td>Longman Introductory Course</td>
+                    <td>70</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">13</th>
+                    <td>Week 14</td>
+                    <td>Longman Introductory Course</td>
+                    <td>76</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">14</th>
+                    <td>Week 15</td>
+                    <td>Longman Introductory Course</td>
+                    <td>70</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">15</th>
+                    <td>Week 16</td>
+                    <td>Peterson's Practice Test</td>
+                    <td>78</td>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -144,37 +210,37 @@
         <div class="row justify-content-center">
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1ZF0YJBjOl6oftUYu39uY4WcORJjo6ZpBiXsp4miawS4/edit?usp=share_link" target="_blank">
-              <img src="img/tugas3.jpg" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-1.png" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1ZF0YJBjOl6oftUYu39uY4WcORJjo6ZpBiXsp4miawS4/edit?usp=sharing" target="_blank">
-              <img src="img/tugas2.jpg" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-2.png" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/17IeL9dfQRsPcfInOI99__f8LD23M_wUf/edit?usp=sharing&ouid=114190141894591722812&rtpof=true&sd=true" target="_blank">
-              <img src="img/tugas1.jpg" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/tugas3.jpg" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1jJM81qTpJMJ6aJ_YSEIrt0fPlwPU_ilCuuxMLc2fHMg/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/tugas2.jpg" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1WqhRBYpzAREwAI5WH508RZyN7TuV9jDW8EADekTapZc/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/tugas1.jpg" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1K5FUQwkxkWssw-vNr3BRMP95d-7TbMA90Hxeu75KVVU/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-6.jpg" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1XlbpuhFDEmqbZN-I_43oWzKudHmysEFZGK3HuLwOYIg/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-7.png" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
@@ -184,12 +250,32 @@
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/19eSiLucCa389cebmC1EyxTcX-pNRoCp8czf6GklFmBU/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-9.png" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
           <div class="col-lg-3 mb-2">
             <a href="https://docs.google.com/document/d/1qi3ma9FOdsxkABbRVPL9LY2NcJJ21_duqTMyynv8Pg0/edit?usp=sharing" target="_blank">
-              <img src="img/tugas4.png" style="min-width: 150px; width: 75%" alt="homework" />
+              <img src="img/week-10.png" style="min-width: 150px; width: 75%" alt="homework" />
+            </a>
+          </div>
+          <div class="col-lg-3 mb-2">
+            <a href="https://docs.google.com/document/d/1RmzJYevTsXFtNLzzcSP404iL3SjXXaDr7qdr19tFueo/edit?usp=sharing" target="_blank">
+              <img src="img/week-11.png" style="min-width: 150px; width: 75%" alt="homework" />
+            </a>
+          </div>
+          <div class="col-lg-3 mb-2">
+            <a href="https://docs.google.com/document/d/1ZI886XoSYOPy5ee9gmS_q62UV8LOCKczpRh4MofGiP4/edit?usp=sharing" target="_blank">
+              <img src="img/week-12.png" style="min-width: 150px; width: 75%" alt="homework" />
+            </a>
+          </div>
+          <div class="col-lg-3 mb-2">
+            <a href="https://docs.google.com/document/d/1QELrkif3OnvgS8U7tAq6QjDU5oc3TySbBP_8oHu3flY/edit?usp=sharing" target="_blank">
+              <img src="img/week-13.png" style="min-width: 150px; width: 75%" alt="homework" />
+            </a>
+          </div>
+          <div class="col-lg-3 mb-2">
+            <a href="https://docs.google.com/document/d/1tvUbynSbEIvA0r0S-A-8lPsSjdmlCQ3whL95_cW6W84/edit?usp=sharing" target="_blank">
+              <img src="img/week-14.png" style="min-width: 150px; width: 75%" alt="homework" />
             </a>
           </div>
         </div>
