--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
             d="M0,256L24,218.7C48,181,96,107,144,112C192,117,240,203,288,218.7C336,235,384,181,432,170.7C480,160,528,192,576,176C624,160,672,96,720,90.7C768,85,816,139,864,181.3C912,224,960,256,1008,229.3C1056,203,1104,117,1152,106.7C1200,96,1248,160,1296,202.7C1344,245,1392,267,1416,277.3L1440,288L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"
           ></path>
         </svg>
-        <div class="container d-flex align-items-center justify-content-center flex-column toefl-content overflow-auto mt-5">
+        <div class="container d-flex align-items-center justify-content-center flex-column toefl-content overflow-auto">
           <div class="row">
             <div class="col mb-3">
-              <h2 class="fs-2 text-white">Weekly Toefl</h2>
+              <h2 class="fs-5 text-white">Weekly Toefl</h2>
             </div>
           </div>
           <div class="row w-75">
             <div class="col p-0">
-              <table class="table text-white fs-1">
+              <table class="table text-white fs-5">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
