--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
               <h2 class="fs-5 text-white">Weekly Toefl</h2>
             </div>
           </div>
-          <div class="row w-100 overflow-auto">
+          <div class="row w-100">
             <div class="col p-0">
-              <table class="table text-white fs-6">
+              <table class="table text-white fs-6 overflow-auto">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
